--- a/chart/power/values-bitnami.yaml
+++ b/chart/power/values-bitnami.yaml
@@ -13,7 +13,7 @@ global:
 image:
   registry: de.icr.io
   repository: power/power
-  tag: latest
+  tag: dev
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
