--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -392,7 +392,9 @@ sonarqube-check:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
   needs:
-    - job: build
+    - job: test-karma
+      artifacts: true
+    - job: build:branches
       artifacts: false
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
