--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,5 +10,5 @@ sonar.exclusions=**/power/node_modules/**, **/*spec.ts
 sonar.tests=./power/src
 sonar.test.inclusions=**/*spec.ts
 sonar.ts.tslintconfigpath=./power/tslint.json
-sonar.javascript.lcov.reportPaths=/builds/lgln/power.ni/power-frontend/power/coverage/report-lcov/lcov.info
+sonar.javascript.lcov.reportPaths=/builds/lgln/power.ni/power-frontend/power/coverage/report-lcov/lcov.info,builds/lgln/power.ni/power-frontend/power/coverage/report-lcov/lcov.info,./power/coverage/report-lcov/lcov.info,/power/coverage/report-lcov/lcov.info,power/coverage/report-lcov/lcov.info,../coverage/report-lcov/lcov.info,./coverage/report-lcov/lcov.info,/coverage/report-lcov/lcov.info,coverage/report-lcov/lcov.info
 sonar.typescript.tsconfigPath=./power/tsconfig.sonar.json
