--- a/chart/power/templates/networkpolicy.yaml
+++ b/chart/power/templates/networkpolicy.yaml
@@ -36,7 +36,7 @@ spec:
 {{- end }}
 
 ---
-
+{{- if .Values.defaultDenyNetworkPolicy }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -47,3 +47,4 @@ spec:
   podSelector: {}
   policyTypes:
   - Ingress
+{{- end }}
