--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -285,6 +285,10 @@ kaniko-build:
     - staging
     - production
     - /^demo-.*/
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "production"'
+      when: manual
+    - when: on_success
 
 trivy:
   stage: scan
