--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -382,18 +382,20 @@ sonarqube-check:
   image:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
+  interruptible: true
   needs:
     - job: test-karma
       artifacts: true
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
-    GIT_DEPTH: "0" # Tells git to fetch all the branches of the project, required by the analysis task
+  dependencies: []
   cache:
     key: "${CI_JOB_NAME}"
     paths:
       - .sonar/cache
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
+    GIT_DEPTH: "0" # Tells git to fetch all the branches of the project, required by the analysis task
   script:
     - sonar-scanner
-  allow_failure: true
   only:
     - dev
+  allow_failure: true
