--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ stages:
   - scan
   - deploy
   - delete
-  - quality
 
 cache: &global_cache
   key: ${CI_COMMIT_REF_SLUG}
@@ -303,6 +302,26 @@ trivy:
     - /^demo-.*/
   allow_failure: true
 
+sonarqube:
+  stage: scan
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  dependencies:
+    - test-karma
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
+    GIT_DEPTH: "0" # Tells git to fetch all the branches of the project, required by the analysis task
+  script:
+    - sonar-scanner
+  only:
+    - dev
+  allow_failure: true
+
 helm-deploy:
   stage: deploy
   dependencies: []
@@ -376,26 +395,3 @@ helm-delete:branches:
     - /^demo-.*/
   when: manual
   allow_failure: false
-
-sonarqube-check:
-  stage: quality
-  image:
-    name: sonarsource/sonar-scanner-cli:latest
-    entrypoint: [""]
-  interruptible: true
-  needs:
-    - job: test-karma
-      artifacts: true
-  dependencies: []
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - .sonar/cache
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
-    GIT_DEPTH: "0" # Tells git to fetch all the branches of the project, required by the analysis task
-  script:
-    - sonar-scanner
-  only:
-    - dev
-  allow_failure: true
