--- a/chart/power/values-prod.yaml
+++ b/chart/power/values-prod.yaml
@@ -7,7 +7,7 @@ replicaCount: 2
 image:
   repository: de.icr.io/power/power
   pullPolicy: IfNotPresent
-  tag: production
+  tag: prod
 
 imagePullSecrets:
   - name: de-icr-io
