Fix linter problems

--- a/power/.eslintrc.json
+++ b/power/.eslintrc.json
@@ -82,6 +82,9 @@
                 "@typescript-eslint/naming-convention": "off",
                 "@typescript-eslint/prefer-for-of": "off",
                 "@typescript-eslint/quotes": "off",
+                "@typescript-eslint/no-unused-vars": "off",
+                "@typescript-eslint/no-explicit-any": "off",
+                "@typescript-eslint/explicit-module-boundary-types": "off",
                 "@angular-eslint/component-selector": "off",
                 "@angular-eslint/directive-selector": "off",
                 "jsdoc/newline-after-description": "off",
