--- a/.trivyignore
+++ b/.trivyignore
@@ -1,6 +1,6 @@
-######################
-##  bitnami-debian  ##
-######################
+#######################
+##  bitnami-minideb  ##
+#######################
 
 # max risk is denial of service
 CVE-2021-33574
@@ -10,7 +10,6 @@ CVE-2021-20231
 CVE-2021-20232
 CVE-2020-24659
 CVE-2021-20305
-CVE-2019-13115
 CVE-2019-13627
 
 # amd64 architecture is not affected
@@ -33,6 +32,14 @@ CVE-2019-15847
 
 # we are not resolving unkown domain names
 CVE-2019-12290
+
+
+#####################
+##  bitnami-nginx  ##
+#####################
+
+# tls is not handled from container
+CVE-2019-13115
 
 # curl is not used
 CVE-2021-22898
