--- a/chart/values-prod.yaml
+++ b/chart/values-prod.yaml
@@ -290,12 +290,9 @@ tolerations: {}
 podSecurityContext:
   enabled: true
   fsGroup: 1001
-  ## sysctl settings
-  ## Example:
-  ## sysctls:
-  ## - name: net.core.somaxconn
-  ##   value: "10000"
-  ##
+  runAsUser: 1001
+  runAsNonRoot: true
+  seccompProfile: runtime/default
   sysctls: []
 
 ## NGINX Core containers' Security Context (only main container).
@@ -306,6 +303,12 @@ containerSecurityContext:
   runAsUser: 1001
   runAsNonRoot: true
   readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - all
+    add:
+      - NET_BIND_SERVICE
 
 ## Configures the ports NGINX listens on
 ##
@@ -452,7 +455,6 @@ service:
 ## between NGINX and a given LDAP Server
 ##
 ldapDaemon:
-
   enabled: false
 
   ## Bitnami NGINX LDAP Auth Daemon image
@@ -478,7 +480,6 @@ ldapDaemon:
   ##
   ##
   ldapConfig:
-
     ## LDAP URI where to query the server
     ## Must follow the pattern -> ldap[s]:/<hostname>:<port>
     ##
@@ -602,11 +603,17 @@ initContainers:
   - name: config
     image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
     imagePullPolicy: Always
-    command: ["/bin/sh", "-c", "cat /opt/bitnami/nginx/conf/server_blocks/power.conf | sed --expression=\"s#\\${BKG_GEOCODING_SECRET}#${BKG_GEOCODING_SECRET}#g\" > /server_blocks/power.conf"]
+    command:
+      [
+        "/bin/sh",
+        "-c",
+        "cat /opt/bitnami/nginx/conf/server_blocks/power.conf | sed --expression=\"s#\\${BKG_GEOCODING_SECRET}#${BKG_GEOCODING_SECRET}#g\" > /server_blocks/power.conf",
+      ]
     securityContext:
       runAsUser: 1001
       runAsNonRoot: true
       readOnlyRootFilesystem: true
+      allowPrivilegeEscalation: false
     volumeMounts:
       - name: power-config
         mountPath: /server_blocks/
@@ -838,6 +845,12 @@ metrics:
     runAsUser: 1001
     runAsNonRoot: true
     readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+        - all
+      add:
+        - NET_BIND_SERVICE
 
   ## Prometheus Operator ServiceMonitor configuration
   ##
@@ -846,17 +859,14 @@ metrics:
     ## Namespace in which Prometheus is running
     ##
     # namespace: monitoring
-
     ## Interval at which metrics should be scraped.
     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
     ##
     # interval: 10s
-
     ## Timeout after which the scrape is ended
     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
     ##
     # scrapeTimeout: 10s
-
     ## ServiceMonitor selector labels
     ## ref: https://github.com/bitnami/charts/tree/master/bitnami/prometheus-operator#prometheus-configuration
     ##
