Accepted new risks

--- a/.trivyignore
+++ b/.trivyignore
@@ -12,6 +12,8 @@ CVE-2020-24659
 CVE-2021-20305
 CVE-2019-13627
 CVE-2019-13115
+CVE-2021-33560
+CVE-2021-3580
 
 # amd64 architecture is not affected
 CVE-2020-1751
