--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -295,7 +295,7 @@ trivy:
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - docker pull "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
-    - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
+    - trivy image -s UNKNOWN,MEDIUM,HIGH,CRITICAL --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
   only:
     - dev
     - staging
