--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=lgln_power.ni_power-frontend_AXe1ePomH9iBuLpb42Jp
 sonar.qualitygate.wait=true
-sonar.host.url=http://sonarqube-sonarqube.sonar.svc.cluster.local:9000
+sonar.host.url=https://sonar.power.niedersachsen.dev/
 sonar.login=admin
 sonar.password=${env.SONAR_PASSWORD}
 sonar.projectVersion=1.0
