--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,7 @@ http {
     log_format    main '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status  $body_bytes_sent "$http_referer" '
                        '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format my_tracking '$request_time [Frontend] $request_body';
     access_log    "/dev/stdout";
     add_header    X-Frame-Options SAMEORIGIN;
 
@@ -64,6 +65,22 @@ http {
             access_log   off;
             allow 127.0.0.1;
             deny all;
+        }
+
+        location /report {
+            if ($request_method != POST) {
+                return 405;
+            }
+            proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_redirect off;
+            proxy_pass $scheme://127.0.0.1:$server_port/success;
+            access_log  "/dev/stdout" my_tracking;
+        }
+
+        location /success {
+            return 200;
         }
     }
 }
