Change nginx configuration for logging

--- a/nginx/server/power.conf
+++ b/nginx/server/power.conf
@@ -82,4 +82,20 @@ server {
     proxy_hide_header x-clv-s3-version;
     include "/opt/bitnami/nginx/conf/custom/proxy.conf";
   }
+  location /report {
+    if ($request_method != POST) {
+      return 405;
+    }
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_redirect off;
+    proxy_pass $scheme://127.0.0.1:$server_port/success;
+    access_log  "/dev/stdout" my_tracking;
+  }
+
+  location /success {
+    return 200;
+  }
+
 }
