--- a/chart/values-staging.yaml
+++ b/chart/values-staging.yaml
@@ -852,8 +852,8 @@ metrics:
     ## ServiceMonitor selector labels
     ## ref: https://github.com/bitnami/charts/tree/master/bitnami/prometheus-operator#prometheus-configuration
     ##
-    # selector:
-    #   prometheus: my-prometheus
+    selector:
+      release: prometheus
 
 ## Pod Disruption Budget configuration
 ## ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
